-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8
-
-
7184e469f (dev), 4982d5f89 (6.8), b6d8d6fd3 (6.7), 83dbba885 (tqtc/lts-6.5), be98379ee (dev), acebcf5a3 (6.8), c753a55e6 (6.7), 78b3dca70 (tqtc/lts-6.5)
-
Multimedia wk 31-32
agent:2024/05/01 01:09:19 build.go:404: QWARN : tst_QSoundEffect::testCorruptFile() QSoundEffect(qaudio): Error decoding source file:///home/qt/work/qt/qtmultimedia/tests/auto/integration/qsoundeffect/test_corrupted.wav agent:2024/05/01 01:09:19 build.go:404: PASS : tst_QSoundEffect::testCorruptFile() agent:2024/05/01 01:09:19 build.go:404: PASS : tst_QSoundEffect::cleanupTestCase() agent:2024/05/01 01:09:19 build.go:404: Totals: 15 passed, 0 failed, 0 skipped, 0 blacklisted, 21668ms agent:2024/05/01 01:09:19 build.go:404: ********* Finished testing of tst_QSoundEffect ********* agent:2024/05/01 01:09:19 build.go:404: sanitizer-testrunner.py INFO: Test exit code was: -11 agent:2024/05/01 01:09:19 build.go:404: sanitizer-testrunner.py ERROR: Crash detected
agent:2024/05/04 23:42:28 build.go:404: QWARN : tst_QSoundEffect::testCorruptFile() QSoundEffect(qaudio): Error decoding source file:///home/qt/work/qt/qtmultimedia/tests/auto/integration/qsoundeffect/test_corrupted.wav agent:2024/05/04 23:42:28 build.go:404: PASS : tst_QSoundEffect::testCorruptFile() agent:2024/05/04 23:42:28 build.go:404: PASS : tst_QSoundEffect::cleanupTestCase() agent:2024/05/04 23:42:28 build.go:404: Totals: 15 passed, 0 failed, 0 skipped, 0 blacklisted, 21155ms agent:2024/05/04 23:42:28 build.go:404: ********* Finished testing of tst_QSoundEffect ********* agent:2024/05/04 23:42:28 build.go:404: Assertion 'pa_atomic_load(&(o)->_ref) >= 1' failed at ../src/pulse/operation.c:123, function pa_operation_cancel(). Aborting. agent:2024/05/04 23:42:28 build.go:404: Received signal 6 (SIGABRT)
| For Gerrit Dashboard: QTBUG-125213 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 565630,2 | QSoundEffect: fix memory corruption | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 565914,2 | QSoundEffect: fix memory corruption | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 565967,2 | QSoundEffect: fix memory corruption | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 566158,2 | QSoundEffect: fix memory corruption | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |
| 579504,2 | Pulseaudio: guard m_context with lock | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 579631,2 | Pulseaudio: guard m_context with lock | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 579733,2 | Pulseaudio: guard m_context with lock | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 579749,2 | Pulseaudio: guard m_context with lock | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |