QSoundEffect: fix memory corruption

`QSample::release` was called multiple times: once from
`QSoundEffect::setSource` and once from `SampleDeleter`. This caused
asan failures.

Fixes: QTBUG-125213
Pick-to: 6.5 6.7 6.8
Change-Id: Iaede2ca3c13143d468159097b312535f5dd4d085
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>